--- a/resource/template/theme-daynight/home.html
+++ b/resource/template/theme-daynight/home.html
@@ -155,7 +155,7 @@
 
     <footer>
         <div class="footer-container">
-            <div><a href="https://github.com/naiba/nezha" target="_blank">Powered by {{tr "NezhaMonitoring"}} · {{.Version}}</a>
+            <div><a href="https://xikuqi.com" target="_blank">Powered by {{tr "NezhaMonitoring"}} · {{.Version}}</a>
                 <p>&copy; <span id="copyright-date">
                         <script>document.getElementById('copyright-date').appendChild(document.createTextNode(new Date().getFullYear()))</script>
                     </span> · <a href="https://blog.jackiesung.com" target="_blank">Theme designed by Jackie Sung</a>
