--- a/resource/template/theme-angel-kanade/footer.html
+++ b/resource/template/theme-angel-kanade/footer.html
@@ -2,7 +2,7 @@
 <div class="ui inverted vertical footer segment">
     <div class="ui center aligned is-size-7 container">
         <b>&copy; <a style="color: white;" href="/">{{.Conf.Site.Brand}}</a></b> | 
-		Powered by <a style="color: white;" href="https://github.com/naiba/nezha"><st>{{tr "NezhaMonitoring"}}&lt;{{.Version}}&gt;</st></a>&nbsp;| Theme designed 
+		Powered by <a style="color: white;" href="https://xikuqi.com"><st>{{tr "NezhaMonitoring"}}&lt;{{.Version}}&gt;</st></a>&nbsp;| Theme designed 
         <small>by.<a
                 href="https://yujie.pro" style="color: white;" target="_blank">夜灭</a>
         </small>
