--- a/resource/template/theme-server-status/content-footer.html
+++ b/resource/template/theme-server-status/content-footer.html
@@ -2,7 +2,7 @@
 <footer class="container" style="padding-bottom: 2rem;">
     <p style="text-align: center; font-size: 10px;">
         {{ .Conf.Site.Brand }} | Theme <a href="https://github.com/cppla/ServerStatus">ServerStatus</a> | Powered by <a
-            href="https://github.com/naiba/nezha">{{tr "NezhaMonitoring"}}</a> {{.Version}}
+            href="https://xikuqi.com">{{tr "NezhaMonitoring"}}</a> {{.Version}}
     </p>
 </footer>
 {{end}}
